# os-setup

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-fedora.yml  ci-macos.yml  ci-ubuntu.yml  ci-windows.yml
backup/: README.md  cmd2powershel.CMD  wsl_backup.ps1
config/: fedora.yaml  mac.yaml  ubuntu.yaml  windows.yaml
dotfiles/: .aliases  .gitconfig  .zshrc
linux/: README.md  install_packeges.sh  listallpackages.sh
os_setup/: __init__.py  __main__.py  cli.py  installer.py  os_detector.py  package_managers.py  utils.py  vscode.py
tests/: test_installer.py  test_os_detector.py  test_package_managers.py  test_vscode.py  test_yaml_configs.py
vscode/: extensions.txt
windows/: myTerminal_settings.json  winget_apps.ps1
